# UFU-BCC

./: .gitignore  CMakeLists.txt  README.md  main.c
AED 2/Trabalho 1/: hashtable.c  hashtable.h  main.c
AED 2/Trabalho 2/: main.c  trie.c  trie.h
Backes/Lista 4/: exercicio4.c
Backes/Lista 7/: exercicio10.c  exercicio11.c  exercicio12.c  exercicio15.c  exercicio17.c  exercicio2.c  exercicio3.c  exercicio4.c  exercicio6.c  exercicio7.c  exercicio8.c  exercicio9.c
Backes/Lista 8/: exercicio1.c  exercicio4.c  exercicio5.c
C/Anotações/: Ponteiros.md
C/Backes/Lista 7/: exercicio1.c  exercicio16.c
C/Elaine/Aula 11/: exercicio4.c  exercicio7.c
C/Exercicios/Backes/Lista 4/: exercicio9.c
C/Exercicios/Backes/Lista 7/: exercicio14.c  exercicio5.c
C/Exercicios/Paulo/: Aula01.h
C/URI/: 1024.cpp  1070.cpp  1097.cpp  1157.cpp  1244.cpp  1251.cpp  1258.cpp  1259.cpp  1260.cpp  1281.cpp  1866.cpp  1933.cpp  2058.cpp  2936.cpp  3038.cpp  PUC-ContestA.cpp  PUC-ContestB.cpp  PUC-ContestC.cpp  PUC-ContestD.cpp  PUC-ContestE.cpp  PUC-ContestF.cpp  PUC-ContestG.cpp
Elaine/Aula 11/: exercicio6.c
Elaine/Aula11/: exercicio1.c  exercicio2.c  exercicio5.c
Haskell/: Exercicio01.hs  Lista02.hs  exercicio01.hs
Lista 4/: exercicio10.c  exercicio2.c  exercicio3.c  exercicio5.c  exercicio6.c  exercicio8.c
PF/Aprendendo/: README.md
PF/Exercicios/: Lista01.hs
PF/Exercicios/Atividade 01/: atividade01.hs
PF/Exercicios/Atividade 02/: atividade02.hs
PF/Exercicios/Atividade 03/: atividade03.hs
PF/Exercicios/Atividade 04/: atividade04.hs
PF/Exercicios/Atividade 05/: atividade05.hs
PF/Exercicios/Atividade 06/: atividade06.hs
PF/Exercicios/Prova 2/: exercicio01.hs  exercicio02.hs  exercicio03.hs  kaio_souza.txt
PF/Exercicios/Trabalho 01/: trabalho01.hs
PF/Exercicios/Trabalho 02/: exercicio01.hs  exercicio02.hs  exercicio03.hs  exercicio04.hs  exercicio05.hs  exercicio06.hs  exercicio07.hs  exercicio08.hs  exercicio09.hs  exercicio10.hs
POO2/pratica-1/: pom.xml
PP/Exercicios/Paulo/: Aula01.c
Prolog/: Lista01.pl  README.md  exercicio01.pl
Prolog/Anotações/: Resumo prolog.md
Prolog/Exercicios/: Lista desafio 99.pl
Prolog/Exercicios/Aula 05/: 2.pl
Prolog/Exercicios/Testes/: utilidades.pl
(+70 files in other folders)
