cmake_minimum_required(VERSION 3.15)
project(Treinamento_C C)

set(CMAKE_C_STANDARD 99)

set(Lista 4;7)
foreach(ListaNum IN LISTS Lista)
    message(${ListaNum})
    AUX_SOURCE_DIRECTORY("Backes/Lista ${ListaNum}" L${ListaNum}_APP_SOURCES)
    foreach(FILE ${L${ListaNum}_APP_SOURCES})
        message(${FILE})
        string(REPLACE ".c" "" NAME ${FILE})
        string(REPLACE "Backes/Lista ${ListaNum}/" "Backes_L${ListaNum}_" NAME ${NAME})
        message(${NAME})
        message(${ListaNum})
        add_executable(${NAME} ${FILE})
    endforeach()
endforeach()

AUX_SOURCE_DIRECTORY("Elaine/Aula 11" EA11_APP_SOURCES)
foreach(FILE ${EA11_APP_SOURCES})
    string(REPLACE ".c" "" NAME ${FILE})
    string(REPLACE "Elaine/Aula 11/" "Elaine_A11_" NAME ${NAME})
    add_executable(${NAME} ${FILE})
endforeach()